fourth commit, changed the type in video because the video was not loading.

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <p>Check out <a href="https://github.com/ogdd">my github profile</a> for my web designs sor far!</p>
                 <img src="Ero.jpg" alt="Mighty Robot" width="300" height="300">
                 <video width="320" height="240" controls>
-                    <source src="eurobotvideo.mp4" type="mp4">
+                    <source src="eurobotvideo.mp4" type="video/mp4;codecs="avc1.42E01E, mp4a.40.2"">
                     
                     Your browser does not support the video tag.
                 </video>
