Added the Feedback and submit button for people submit their reviews

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             <h1 id="about-me" class="main-header">About Me</h1>
         </header>
         <nav class="header-nav">
-            <header>
+            <header id="header-navig">
                 <h2>Navigation</h2>
             </header>
             <ul id="header-nav-list">
@@ -44,7 +44,7 @@
                 <p>Developed a Catapult where the required force calculations were process by the code built on Python</p>
                 <p>Check out <a href="https://github.com/ogdd">my github profile</a> for my web designs sor far!</p>
                 <img src="Ero.jpg" alt="Mighty Robot" width="300" height="300">
-                <video width="320" height="240" controls>
+                <video width="320" height="240" controls autoplay muted loop>
                     <source src="eurobotvideo.mp4" type="video/mp4;codecs="avc1.42E01E, mp4a.40.2"">
                     
                     Your browser does not support the video tag.
@@ -57,8 +57,14 @@
                     <li><a href="github.com/ogdd" type="_blank">GitHub</a></li>
                     <li><a href="https://www.linkedin.com/in/olgu-dolu-573075151/">LinkedIn</a></li>
                 </ul>
-            </div>
-            
+            </div><br><br>
+            <form action="">
+                <label for="reviews">Please Share your Feedback;</label><br>
+                <textarea id="reviews" cols="80" rows="20">
+                    You can share your what can be done to improve user experience...
+                </textarea><br>
+                <input tpye="button" value="Submit" class="submit-button">
+            </form>
         </main>
     </body>
 </html>
