changed design features for 1200 px higher screens, changed flex-wrap to wrap, Images and videos and videos were updated for responsive design

--- a/index.html
+++ b/index.html
@@ -41,13 +41,13 @@
                     <p>Participated in Eurobot 2018 and built a functional robot for collecting material from the test area.</p>
                     <p>Developed a Catapult where the required force calculations were process by the code built on Python</p>
                     <p>Check out <a href="https://github.com/ogdd">my github profile</a> for my web designs sor far!</p>
-                    <img src="Ero.jpg" alt="Mighty Robot" width="300" height="300">
-                    <video width="320" height="240" controls autoplay muted loop>
+                    <img src="Ero.jpg" alt="Mighty Robot">
+                    <video width="30%" height="30%" controls autoplay muted loop>
                         <source src="eurobotvideo.mp4" type="video/mp4;codecs="avc1.42E01E, mp4a.40.2"">
 
                         Your browser does not support the video tag.
                     </video>
-                    <img src="firstweb.png" alt="My First Website" width="300" height="300">
+                    <img src="firstweb.png" alt="My First Website">
                 </div>
                 <div id="contact-me" class="contact-me">
                     <h4>Contact Me by the Channels below:</h4>
