Added order attributes for the short-intro, languages, projects, contact-me, submit-form elements. Fixed minor indentation mistakes.

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                             <input id="email" type="email" value="xxxx@xxx.xx">
                         </li>
                         <li>
-                            <label for="reviews">Please Share your Feedback;</label><br>
+                            <label for="reviews"><strong>Please Share your Feedback;</strong></label><br>
                             <textarea id="reviews" cols="80" rows="20">You can share your what can be done to improve user experience...
                             </textarea><br>
                             <input type="submit" value="Submit" class="submit-button">
