--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <title>About Me</title>
         <link rel="stylesheet" href="about-me.css" />
+        <script src="script.js"></script>
     </head>
 
     <body>
